--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-query": "^5.69.0",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
