created the container and data writing on container terminal started

--- a/BACKEND/Dockerfile
+++ b/BACKEND/Dockerfile
@@ -1,17 +1,35 @@
 FROM ubuntu:20.04
 
-RUN useradd -ms /bin/bash/sandbox
+# Create a non-root user
+RUN useradd -ms /bin/bash sandbox
 
+# Set working directory
 WORKDIR /home/sandbox
 
-RUN apt-update && apt-upgrade -y
+# Update packages with retry logic and clean up
+RUN apt-get update || apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y --no-install-recommends \
+    nano \
+    curl \
+    ca-certificates && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN apt install nan curl -y
- 
-# Install the latest version of Node.js
-RUN curl -fsSL https://deb.nodesource.com/setup_19.x | bash - && apt-get install -y nodejs
+# Install latest Node.js (v22)
+RUN curl -fsSL https://deb.nodesource.com/setup_22.x | bash - && \
+    apt-get install -y nodejs && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN echo "PS1='\w '" >> /home/sandbox/.bashrc
+# Set a basic prompt
+RUN echo "PS1='\\w '" >> /home/sandbox/.bashrc
 
+# Set app working dir
 WORKDIR /home/sandbox/app
 
+# Switch to non-root user
+USER sandbox
+
+# Default command
+CMD ["/bin/bash"]
