--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -13,8 +13,10 @@
     "@ant-design/icons": "^6.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-query": "^5.69.0",
+    "@xterm/addon-attach": "^0.11.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "allotment": "^1.20.3",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
     "react": "^19.0.0",
